@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<xliff version="1.0">
+	<file source-language="en" datatype="plaintext" original="messages" date="2013-03-05T21:51:13Z" product-name="cc_infotablesmgm">
+		<header/>
+		<body>
+			<trans-unit id="mlang_labels_tablabel" xml:space="preserve">
+				<source>Static Info Tables Manager</source>
+			</trans-unit>
+			<trans-unit id="mlang_labels_tabdescr" xml:space="preserve">
+				<source>Static Info Tables Manager</source>
+			</trans-unit>
+			<trans-unit id="mlang_tabs_tab" xml:space="preserve">
+				<source>Info Tables Mgm.</source>
+			</trans-unit>
+		</body>
+	</file>
+</xliff>
